2009-02-01  Roland McGrath  <roland@redhat.com>

	* c++/edit-values.cc: New file.

2009-01-28  Roland McGrath  <roland@redhat.com>

	* c++/dwarf: Add line table support.
	* c++/values.cc: New file.
	* c++/line_info.cc: New file.
	* c++/subr.hh: New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

	* libdwP.h (struct Dwarf_Line_s): Move out of struct Dwarf_Lines_s
	defn so C++ doesn't scope the name to not match the Dwarf_Line typedef.

	* libdwP.h (struct Dwarf_Files_s): Replace dbg field with cu field.

2009-01-26  Roland McGrath  <roland@redhat.com>

	* c++/dwarf (dwarf_output): Renamed to dwarf_edit and moved to ...
	* c++/dwarf_edit: ... here.  New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* c++/dwarf: New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

2009-01-26  Roland McGrath  <roland@redhat.com>

	* dwarf_ranges.c: Return 0 when no ranges or *_pc attrs at all.

2009-01-25  Roland McGrath  <roland@redhat.com>

	* dwarf_getattrs.c: Correctly skip attribute values when restarting.

2009-01-23  Roland McGrath  <roland@redhat.com>

	* Makefile.am ($(srcdir)/known-dwarf.h): Target renamed back.
	Put these rules under if MAINTAINER_MODE.

2009-01-22  Roland McGrath  <roland@redhat.com>

	* dwarf.h: Add DW_OP_GNU_encoded_addr.

2009-01-21  Roland McGrath  <roland@redhat.com>

	* Makefile.am (CLEANFILES): Renamed to ...
	(MOSTLYCLEANFILES): ... here.
	(CLEANFILES): New variable, add known-dwarf.h.

2009-01-17  Roland McGrath  <roland@redhat.com>

	* Makefile.am (known-dwarf.h): Target renamed, not in $(srcdir).
	Make it unconditional.
	(BUILT_SOURCES): Updated.

	* dwarf.h: Add description comments for DW_LANG_* values.

	* Makefile.am [MAINTAINER_MODE]
	($(srcdir)/known-dwarf.h): New target.
	(BUILT_SOURCES): Add it.

	* dwarf.h: Add DW_OP_GNU_push_tls_address, DW_OP_GNU_uninit.

2008-01-06  Roland McGrath  <roland@redhat.com>
